단어장 추가 20
.구조 재수정
.index.html 수정

--- a/index.html
+++ b/index.html
@@ -141,9 +141,9 @@ body::after{content:'';position:fixed;bottom:-20%;right:-10%;width:50vw;height:5
 .card-word{font-family:'DM Serif Display',serif;font-size:2.6rem;letter-spacing:1px;text-align:center;margin-bottom:6px}
 .card-ipa{font-size:.95rem;color:var(--text-dim);text-align:center;margin-bottom:20px;font-family:'Noto Sans',sans-serif}
 .card-meanings{width:100%}
-.meaning-group{width:100%;margin-bottom:10px;display:flex;align-items:baseline;gap:8px;flex-wrap:wrap}.meaning-group:last-child{margin-bottom:0}
-.pos-tag{display:inline-block;background:var(--accent);color:#fff;font-size:.7rem;font-weight:700;padding:3px 10px;border-radius:20px;flex-shrink:0}
-.def-inline{font-size:1rem;line-height:1.6;color:var(--text)}
+.meaning-group{width:100%;margin-bottom:10px}.meaning-group:last-child{margin-bottom:0}
+.pos-tag{display:inline-block;background:var(--accent);color:#fff;font-size:.7rem;font-weight:700;padding:3px 10px;border-radius:20px;vertical-align:middle;margin-right:6px}
+.def-inline{font-size:1rem;line-height:1.6;color:var(--text)}.def-highlight{color:#d32f2f;font-weight:700}.def-num{font-weight:700;color:var(--text);flex-shrink:0;width:1.2em}.def-numbered-first{display:inline-flex}.def-numbered{display:flex;margin-left:40px}
 
 /* Navigation */
 .card-nav{display:flex;gap:8px;margin-bottom:12px}
@@ -1106,10 +1106,10 @@ function buildExamplesHtml(word) {
   const pattern = new RegExp(patterns.join('|'), 'gi');
   let h = '';
   word.examples.forEach(ex => {
-    const enText = ex.en.replace(pattern, '<b>$&</b>');
+    const enText = ex.en.replace(/\n/g, '<br>').replace(pattern, '<b>$&</b>');
     h += '<div class="example-item">';
     h += `<div class="example-en">${enText}</div>`;
-    h += `<div class="example-ko">${ex.ko}`;
+    h += `<div class="example-ko">${ex.ko.replace(/\n/g, '<br>')}`;
     if (ex.source) h += ` <span class="example-source">${ex.source}</span>`;
     h += '</div></div>';
   });
@@ -1120,7 +1120,7 @@ function buildDerivativesHtml(word) {
   if (!word.derivatives || word.derivatives.length === 0) return '';
   let h = '';
   word.derivatives.forEach(d => {
-    h += `<div class="deriv-item"><span class="deriv-word">${d.en}</span><span class="deriv-pos">${d.pos}</span><span class="deriv-def">${d.defs.join(', ')}</span></div>`;
+    h += `<div class="deriv-item"><span class="deriv-word">${d.en}</span><span class="deriv-pos">${d.pos}</span><span class="deriv-def">${d.defs.map(dd => formatDef(dd)).join(' ')}</span></div>`;
   });
   return h;
 }
@@ -1248,7 +1248,8 @@ function showCard() {
   // 뜻 HTML 생성
   let meaningsHtml = '';
   word.meanings.forEach(m => {
-    meaningsHtml += `<div class="meaning-group"><span class="pos-tag">${m.pos}</span> <span class="def-inline">${m.defs.join(', ')}</span></div>`;
+    const defsHtml = m.defs.map(d => formatDef(d)).join(' ');
+    meaningsHtml += `<div class="meaning-group"><span class="pos-tag">${m.pos}</span> <span class="def-inline">${defsHtml}</span></div>`;
   });
 
   if (viewMode === 'all') {
@@ -1271,7 +1272,7 @@ function showCard() {
       });
       partsHtml += '</div>';
       if (word.origin) {
-        partsHtml += `<div class="ety-origin">💡 ${word.origin}</div>`;
+        partsHtml += `<div class="ety-origin">💡 ${word.origin.replace(/\n/g, '<br>')}</div>`;
       }
       etyEl.innerHTML = partsHtml;
       document.getElementById('frontHint').textContent = '탭하여 어원 보기';
@@ -1409,16 +1410,42 @@ function retryWrongOnly() {
   showQuizQuestion();
 }
 
+// def 문자열에서 번호와 *를 제거한 순수 텍스트 반환
+function stripDef(d) {
+  return d.replace(/^\d+\s*/, '').replace(/\*([^*]*)\*?/g, '$1');
+}
+
+// def 문자열을 HTML로 변환 (번호 + 붉은볼드 처리)
+function formatDef(d) {
+  const numMatch = d.match(/^(\d+)\s+(.*)/);
+  if (numMatch) {
+    const num = numMatch[1];
+    let text = numMatch[2];
+    const cls = num === '1' ? 'def-numbered-first' : 'def-numbered';
+    if (text.startsWith('*') && text.indexOf('*', 1) === -1) {
+      text = text.substring(1);
+      return `<span class="${cls}"><span class="def-num">${num}</span><span class="def-highlight">${text}</span></span>`;
+    }
+    text = text.replace(/\*([^*]+)\*/g, '<span class="def-highlight">$1</span>');
+    return `<span class="${cls}"><span class="def-num">${num}</span><span>${text}</span></span>`;
+  }
+  if (d.startsWith('*') && d.indexOf('*', 1) === -1) {
+    return `<span class="def-highlight">${d.substring(1)}</span>`;
+  }
+  const replaced = d.replace(/\*([^*]+)\*/g, '<span class="def-highlight">$1</span>');
+  return replaced;
+}
+
 // 단어의 모든 뜻을 하나의 문자열로 결합
 function getDefsText(word) {
-  return word.meanings.map(m => m.defs.join(', ')).join(' / ');
+  return word.meanings.map(m => m.defs.map(d => stripDef(d)).join(', ')).join(' / ');
 }
 
 // 단어의 모든 뜻을 개별 배열로
 function getAllDefs(word) {
   const defs = [];
   word.meanings.forEach(m => m.defs.forEach(d => {
-    d.split(',').forEach(s => { if (s.trim()) defs.push(s.trim()); });
+    stripDef(d).split(',').forEach(s => { if (s.trim()) defs.push(s.trim()); });
   }));
   return defs;
 }
