day 변경시 카드 뒤집기 초기화

--- a/index.html
+++ b/index.html
@@ -1033,6 +1033,7 @@ function updateDayTitle() {
 }
 
 function startStudy() {
+  resetFlip();
   const order = document.getElementById('wordOrder').value;
   let pool = [...dayData[currentDayIndex].words];
   if (order === 'random') pool = shuffle(pool);
