--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ body::after{content:'';position:fixed;bottom:-20%;right:-10%;width:50vw;height:5
 .deriv-item{display:flex;align-items:baseline;gap:8px;margin-bottom:5px;font-size:.82rem}
 .deriv-word{font-family:'DM Serif Display',serif;font-weight:600;color:var(--accent);min-width:85px}
 .deriv-pos{font-size:.62rem;font-weight:700;color:#fff;background:var(--accent);padding:2px 7px;border-radius:10px;flex-shrink:0}
-.deriv-def{color:var(--text)}
+.deriv-def{color:var(--text)}.deriv-def .def-numbered{margin-left:0;display:inline-flex}.deriv-def .def-num{width:.8em}.deriv-def .def-numbered-first,.deriv-def .def-numbered{margin-right:8px}
 .syn-ant-row{display:flex;gap:8px;flex-wrap:wrap}
 .syn-tag,.ant-tag{font-size:.78rem;padding:5px 11px;border-radius:8px}
 .syn-tag{background:rgba(46,170,127,.08);border:1px solid rgba(46,170,127,.2);color:var(--green)}
