--- a/index_.html
+++ b/index_.html
@@ -114,7 +114,7 @@ body::after{content:'';position:fixed;bottom:-20%;right:-10%;width:50vw;height:5
 .deriv-item{display:flex;align-items:baseline;gap:8px;margin-bottom:5px;font-size:.82rem}
 .deriv-word{font-family:'DM Serif Display',serif;font-weight:600;color:var(--accent);min-width:85px}
 .deriv-pos{font-size:.62rem;font-weight:700;color:#fff;background:var(--accent);padding:2px 7px;border-radius:10px;flex-shrink:0}
-.deriv-def{color:var(--text)}
+.deriv-def{color:var(--text)}.deriv-def .def-numbered{margin-left:0;display:inline-flex}.deriv-def .def-num{width:.8em}.deriv-def .def-numbered-first,.deriv-def .def-numbered{margin-right:8px}
 .syn-ant-row{display:flex;gap:8px;flex-wrap:wrap}
 .syn-tag,.ant-tag{font-size:.78rem;padding:5px 11px;border-radius:8px}
 .syn-tag{background:rgba(46,170,127,.08);border:1px solid rgba(46,170,127,.2);color:var(--green)}
@@ -144,6 +144,7 @@ body::after{content:'';position:fixed;bottom:-20%;right:-10%;width:50vw;height:5
 .meaning-group{width:100%;margin-bottom:10px}.meaning-group:last-child{margin-bottom:0}
 .pos-tag{display:inline-block;background:var(--accent);color:#fff;font-size:.7rem;font-weight:700;padding:3px 10px;border-radius:20px;vertical-align:middle;margin-right:6px}
 .def-inline{font-size:1rem;line-height:1.6;color:var(--text)}.def-highlight{color:#d32f2f;font-weight:700}.def-num{font-weight:700;color:var(--text);flex-shrink:0;width:1.2em}.def-numbered-first{display:inline-flex}.def-numbered{display:flex;margin-left:40px}
+.def-prefixed-grid{display:inline-grid;grid-template-columns:auto auto 1fr;column-gap:5px;line-height:1.6;font-size:1rem}.def-prefixed-grid .pf-num{font-weight:700}
 
 /* Navigation */
 .card-nav{display:flex;gap:8px;margin-bottom:12px}
@@ -1249,14 +1250,37 @@ function showCard() {
   // 뜻 HTML 생성
   let meaningsHtml = '';
   word.meanings.forEach(m => {
-    const defsHtml = m.defs.map(d => formatDef(d)).join(' ');
-    meaningsHtml += `<div class="meaning-group"><span class="pos-tag">${m.pos}</span> <span class="def-inline">${defsHtml}</span></div>`;
+    const parsed = m.defs.map(d => formatDef(d));
+    const hasPrefix = parsed.some(p => p.includes('def-prefixed'));
+    if (hasPrefix) {
+      let gridHtml = '<span class="def-prefixed-grid">';
+      m.defs.forEach(d => {
+        const pm = d.match(/^(.+?\)\s*)(\d+)\s+(.*)/);
+        if (pm) {
+          let text = pm[3].replace(/\*([^*]+)\*/g, '<span class="def-highlight">$1</span>');
+          gridHtml += `<span>${pm[1]}</span><span class="pf-num">${pm[2]}</span><span>${text}</span>`;
+        } else {
+          const nm = d.match(/^(\d+)\s+(.*)/);
+          if (nm) {
+            let text = nm[2].replace(/\*([^*]+)\*/g, '<span class="def-highlight">$1</span>');
+            gridHtml += `<span></span><span class="pf-num">${nm[1]}</span><span>${text}</span>`;
+          } else {
+            gridHtml += `<span></span><span></span><span>${d}</span>`;
+          }
+        }
+      });
+      gridHtml += '</span>';
+      meaningsHtml += `<div class="meaning-group"><span class="pos-tag">${m.pos}</span> ${gridHtml}</div>`;
+    } else {
+      const defsHtml = parsed.join(' ');
+      meaningsHtml += `<div class="meaning-group"><span class="pos-tag">${m.pos}</span> <span class="def-inline">${defsHtml}</span></div>`;
+    }
   });
 
   if (viewMode === 'all') {
     // 전체보기: 앞면=영어+IPA+뜻, 뒷면=단어 구조 분석
     document.getElementById('cardWord').textContent = word.en;
-    document.getElementById('cardIpa').textContent = word.ipa || '';
+    document.getElementById('cardIpa').textContent = Array.isArray(word.ipa) ? word.ipa.join('  ') : (word.ipa || '');
     document.getElementById('cardMeanings').innerHTML = meaningsHtml;
     document.getElementById('cardWordBack').textContent = word.en;
     document.getElementById('cardIpaBack').textContent = '';
@@ -1295,7 +1319,7 @@ function showCard() {
   } else if (viewMode === 'en') {
     // 영어보기: 앞면=영어+IPA, 뒷면=뜻
     document.getElementById('cardWord').textContent = word.en;
-    document.getElementById('cardIpa').textContent = word.ipa || '';
+    document.getElementById('cardIpa').textContent = Array.isArray(word.ipa) ? word.ipa.join('  ') : (word.ipa || '');
     document.getElementById('cardMeanings').innerHTML = '';
     document.getElementById('frontHint').textContent = '탭하여 뜻 보기';
     document.getElementById('cardWordBack').textContent = '';
@@ -1313,7 +1337,7 @@ function showCard() {
     document.getElementById('cardMeanings').innerHTML = meaningsHtml;
     document.getElementById('frontHint').textContent = '탭하여 단어 보기';
     document.getElementById('cardWordBack').textContent = word.en;
-    document.getElementById('cardIpaBack').textContent = word.ipa || '';
+    document.getElementById('cardIpaBack').textContent = Array.isArray(word.ipa) ? word.ipa.join('  ') : (word.ipa || '');
     document.getElementById('cardMeaningsBack').innerHTML = '';
     document.getElementById('cardEtymology').innerHTML = '';
     document.getElementById('cardExtras').innerHTML = '';
@@ -1418,6 +1442,14 @@ function stripDef(d) {
 
 // def 문자열을 HTML로 변환 (번호 + 붉은볼드 처리)
 function formatDef(d) {
+  const prefixMatch = d.match(/^(.+?\)\s*)(\d+)\s+(.*)/);
+  if (prefixMatch) {
+    const prefix = prefixMatch[1];
+    const num = prefixMatch[2];
+    let text = prefixMatch[3];
+    text = text.replace(/\*([^*]+)\*/g, '<span class="def-highlight">$1</span>');
+    return `<span class="def-prefixed">${prefix}<b>${num}</b> ${text}</span>`;
+  }
   const numMatch = d.match(/^(\d+)\s+(.*)/);
   if (numMatch) {
     const num = numMatch[1];
@@ -1629,7 +1661,7 @@ function showQuizQuestion() {
     document.getElementById('quizLabel').textContent = isMultipleChoice ? '다음 영어 단어의 뜻은?' : '다음 영어 단어의 뜻을 쓰세요';
     document.getElementById('quizQuestion').textContent = q.en;
     document.getElementById('quizQuestion').className = 'quiz-question en';
-    document.getElementById('quizIpa').textContent = q.ipa || '';
+    document.getElementById('quizIpa').textContent = Array.isArray(q.ipa) ? q.ipa.join('  ') : (q.ipa || '');
   } else {
     document.getElementById('quizLabel').textContent = isMultipleChoice ? '다음 뜻에 해당하는 영어 단어는?' : '다음 뜻에 해당하는 영어 단어를 쓰세요';
     document.getElementById('quizQuestion').textContent = getDefsText(q);
