--- a/index_.html
+++ b/index_.html
@@ -139,7 +139,7 @@ body::after{content:'';position:fixed;bottom:-20%;right:-10%;width:50vw;height:5
 .extras-tab-content{display:none}
 .extras-tab-content.active{display:block}
 .card-word{font-family:'DM Serif Display',serif;font-size:2.6rem;letter-spacing:1px;text-align:center;margin-bottom:6px}
-.card-ipa{font-size:.95rem;color:var(--text-dim);text-align:center;margin-bottom:20px;font-family:'Noto Sans',sans-serif}
+.card-ipa{font-size:.95rem;color:var(--text-dim);text-align:center;margin-bottom:20px;font-family:Arial,Helvetica,sans-serif}
 .card-meanings{width:100%}
 .meaning-group{width:100%;margin-bottom:10px}.meaning-group:last-child{margin-bottom:0}
 .pos-tag{display:inline-block;background:var(--accent);color:#fff;font-size:.7rem;font-weight:700;padding:3px 10px;border-radius:20px;vertical-align:middle;margin-right:6px}
@@ -181,7 +181,7 @@ body::after{content:'';position:fixed;bottom:-20%;right:-10%;width:50vw;height:5
 .quiz-question{font-size:1.8rem;font-weight:700;margin-bottom:4px}
 .quiz-question.en{font-family:'DM Serif Display',serif;letter-spacing:1px}
 .quiz-question.kr{font-size:1.2rem;line-height:1.6}
-.quiz-ipa{font-size:.9rem;color:var(--text-dim);font-family:'Noto Sans',sans-serif}
+.quiz-ipa{font-size:.9rem;color:var(--text-dim);font-family:Arial,Helvetica,sans-serif}
 
 .quiz-choices{display:flex;flex-direction:column;gap:8px;margin-bottom:12px}
 .quiz-choice{padding:14px 18px;border:1.5px solid rgba(0,0,0,.08);border-radius:14px;background:var(--surface);color:var(--text);font-family:'Noto Sans KR',sans-serif;font-size:.92rem;cursor:pointer;transition:all .2s;box-shadow:var(--shadow);text-align:left}
