--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ body::after{content:'';position:fixed;bottom:-20%;right:-10%;width:50vw;height:5
 .card-etymology .ety-part .part-text{font-family:'DM Serif Display',serif;font-size:1.1rem;font-weight:600;color:var(--accent);letter-spacing:.5px}
 .card-etymology .ety-part .part-mean{font-size:.7rem;color:var(--text-dim);margin-top:2px}
 .card-etymology .ety-plus{display:flex;align-items:center;color:var(--text-dim);font-size:1rem;font-weight:700;padding:0 2px}
-.card-etymology .ety-origin{font-size:.82rem;color:var(--text);line-height:1.5;padding:10px 14px;border-radius:10px;background:rgba(46,170,127,.05);border:1px solid rgba(46,170,127,.12)}
+.card-etymology .ety-origin{font-size:.82rem;color:var(--text);line-height:1.6;padding:10px 14px;border-radius:10px;background:rgba(46,170,127,.05);border:1px solid rgba(46,170,127,.12)}.tree-root{margin-bottom:4px;text-align:center}.tree-wrap{text-align:left;width:fit-content;margin:0 auto}.tree-list{list-style:none;padding:0;margin:0}.tree-item{position:relative;padding-left:20px;padding-top:1px;padding-bottom:1px}.tree-item::after{content:'';position:absolute;left:0;width:2px;background:rgba(108,92,231,0.45)}.tree-item:first-child::after{top:0.65em;bottom:0}.tree-item:not(:first-child):not(:last-child)::after{top:0;bottom:0}.tree-item:last-child::after{top:0;height:0.65em}.tree-item::before{content:'';position:absolute;left:0;top:0.65em;width:16px;border-top:2px solid rgba(108,92,231,0.45)}.tree-item:only-child::after{display:none}.tree-sub{padding-left:20px}.tree-item{position:relative;padding-left:20px;padding-top:1px;padding-bottom:1px}.tree-item::after{content:'';position:absolute;left:0;width:2px;background:rgba(108,92,231,0.45)}.tree-item:first-child::after{top:0.65em;bottom:0}.tree-item:not(:first-child):not(:last-child)::after{top:0;bottom:0}.tree-item:last-child::after{top:0;height:0.65em}.tree-item::before{content:'';position:absolute;left:0;top:0.65em;width:16px;border-top:2px solid rgba(108,92,231,0.45)}.tree-item:only-child::after{display:none}.tree-sub{padding-left:32px;margin-left:12px}
 
 /* ── Card Extras (예문, 파생어, 동의어, 숙어) ── */
 .card-extras{width:100%;margin-top:16px;text-align:left}
@@ -1299,7 +1299,33 @@ function showCard() {
       });
       partsHtml += '</div>';
       if (word.origin) {
-        partsHtml += `<div class="ety-origin">💡 ${word.origin.replace(/\n/g, '<br>')}</div>`;
+        const lines = word.origin.split('\n');
+        const treeLines = [];
+        const subLines = [];
+        let rootLine = '';
+        let treeStarted = false;
+        for (const line of lines) {
+          const trimmed = line.trimStart();
+          if (trimmed.startsWith('├') || trimmed.startsWith('└') || trimmed.startsWith('┊')) {
+            treeStarted = true;
+            treeLines.push(trimmed.replace(/^[├└┊]\s*/, ''));
+          } else if (treeStarted) {
+            subLines.push(trimmed);
+          } else {
+            rootLine += (rootLine ? '<br>' : '') + line;
+          }
+        }
+        if (treeLines.length > 0) {
+          let treeHtml = `<div class="tree-root">💡 ${rootLine}</div>`;
+          treeHtml += '<div class="tree-wrap"><ul class="tree-list">';
+          for (const t of treeLines) { treeHtml += `<li class="tree-item">${t}</li>`; }
+          treeHtml += '</ul>';
+          if (subLines.length > 0) { treeHtml += `<div class="tree-sub">${subLines.join('<br>')}</div>`; }
+          treeHtml += '</div>';
+          partsHtml += `<div class="ety-origin">${treeHtml}</div>`;
+        } else {
+          partsHtml += `<div class="ety-origin">💡 ${word.origin.replace(/\n/g, '<br>')}</div>`;
+        }
       }
       etyEl.innerHTML = partsHtml;
       document.getElementById('frontHint').textContent = '탭하여 어원 보기';
