--- a/index_.html
+++ b/index_.html
@@ -99,7 +99,7 @@ body::after{content:'';position:fixed;bottom:-20%;right:-10%;width:50vw;height:5
 .card-etymology .ety-part .part-text{font-family:'DM Serif Display',serif;font-size:1.1rem;font-weight:600;color:var(--accent);letter-spacing:.5px}
 .card-etymology .ety-part .part-mean{font-size:.7rem;color:var(--text-dim);margin-top:2px}
 .card-etymology .ety-plus{display:flex;align-items:center;color:var(--text-dim);font-size:1rem;font-weight:700;padding:0 2px}
-.card-etymology .ety-origin{font-size:.82rem;color:var(--text);line-height:1.6;padding:10px 14px;border-radius:10px;background:rgba(46,170,127,.05);border:1px solid rgba(46,170,127,.12)}.tree-root{margin-bottom:4px;text-align:center}.tree-wrap{text-align:left;width:fit-content;margin:0 auto}.tree-list{list-style:none;padding:0;margin:0}.tree-item{position:relative;padding-left:20px;padding-top:1px;padding-bottom:1px}.tree-item::after{content:'';position:absolute;left:0;width:2px;background:rgba(108,92,231,0.45)}.tree-item:first-child::after{top:0.65em;bottom:0}.tree-item:not(:first-child):not(:last-child)::after{top:0;bottom:0}.tree-item:last-child::after{top:0;height:0.65em}.tree-item::before{content:'';position:absolute;left:0;top:0.65em;width:16px;border-top:2px solid rgba(108,92,231,0.45)}.tree-item:only-child::after{display:none}.tree-sub{padding-left:20px}.tree-item{position:relative;padding-left:20px;padding-top:1px;padding-bottom:1px}.tree-item::after{content:'';position:absolute;left:0;width:2px;background:rgba(108,92,231,0.45)}.tree-item:first-child::after{top:0.65em;bottom:0}.tree-item:not(:first-child):not(:last-child)::after{top:0;bottom:0}.tree-item:last-child::after{top:0;height:0.65em}.tree-item::before{content:'';position:absolute;left:0;top:0.65em;width:16px;border-top:2px solid rgba(108,92,231,0.45)}.tree-item:only-child::after{display:none}.tree-sub{padding-left:32px;margin-left:12px}
+.card-etymology .ety-origin{font-size:.82rem;color:var(--text);line-height:1.6;padding:10px 14px;border-radius:10px;background:rgba(46,170,127,.05);border:1px solid rgba(46,170,127,.12)}.tree-root{margin-bottom:4px;text-align:center}.tree-wrap{text-align:left;width:fit-content;margin:0 auto}.tree-list{list-style:none;padding:0;margin:0}.tree-item{position:relative;padding-left:20px;padding-top:1px;padding-bottom:1px}.tree-item::after{content:'';position:absolute;left:0;width:2px;background:rgba(108,92,231,0.45)}.tree-item:first-child::after{top:0.65em;bottom:0}.tree-item:not(:first-child):not(:last-child)::after{top:0;bottom:0}.tree-item:last-child::after{top:0;height:0.65em}.tree-item::before{content:'';position:absolute;left:0;top:0.65em;width:16px;border-top:2px solid rgba(108,92,231,0.45)}.tree-item:only-child::after{display:none}.tree-sub{padding-left:20px}.tree-item{position:relative;padding-left:20px;padding-top:1px;padding-bottom:1px}.tree-item::after{content:'';position:absolute;left:0;width:2px;background:rgba(108,92,231,0.45)}.tree-item:first-child::after{top:0.65em;bottom:0}.tree-item:not(:first-child):not(:last-child)::after{top:0;bottom:0}.tree-item:last-child::after{top:0;height:0.65em}.tree-item::before{content:'';position:absolute;left:0;top:0.65em;width:16px;border-top:2px solid rgba(108,92,231,0.45)}.tree-item:only-child::after{display:none}.tree-sub{padding-left:32px;margin-left:12px}.tree-item>.tree-list{margin-top:2px}
 
 /* ── Card Extras (예문, 파생어, 동의어, 숙어) ── */
 .card-extras{width:100%;margin-top:16px;text-align:left}
@@ -141,10 +141,11 @@ body::after{content:'';position:fixed;bottom:-20%;right:-10%;width:50vw;height:5
 .card-word{font-family:'DM Serif Display',serif;font-size:2.6rem;letter-spacing:1px;text-align:center;margin-bottom:6px}
 .card-ipa{font-size:.95rem;color:var(--text-dim);text-align:center;margin-bottom:20px;font-family:Arial,Helvetica,sans-serif}
 .card-meanings{width:100%}
-.meaning-group{width:100%;margin-bottom:10px}.meaning-group:last-child{margin-bottom:0}
-.pos-tag{display:inline-block;background:var(--accent);color:#fff;font-size:.7rem;font-weight:700;padding:3px 10px;border-radius:20px;vertical-align:middle;margin-right:6px}
-.def-inline{font-size:1rem;line-height:1.6;color:var(--text)}.def-highlight{color:#d32f2f;font-weight:700}.def-num{font-weight:700;color:var(--text);flex-shrink:0;width:1.2em}.def-numbered-first{display:inline-flex}.def-numbered{display:flex;margin-left:40px}
-.def-prefixed-grid{display:inline-grid;grid-template-columns:auto auto 1fr;column-gap:5px;line-height:1.6;font-size:1rem}.def-prefixed-grid .pf-num{font-weight:700}
+.meaning-group{display:flex;align-items:flex-start;gap:6px;width:100%;margin-bottom:10px}.meaning-group:last-child{margin-bottom:0}
+.pos-tag{flex-shrink:0;background:var(--accent);color:#fff;font-size:.7rem;font-weight:700;padding:3px 10px;border-radius:20px;margin-top:2px}
+.meaning-defs{flex:1;min-width:0}
+.def-inline{font-size:1rem;line-height:1.6;color:var(--text)}.def-highlight{color:#d32f2f;font-weight:700}.def-num{font-weight:700;color:var(--text);flex-shrink:0;width:1.2em}.def-numbered-first{display:flex}.def-numbered{display:flex}
+.def-prefixed-grid{display:grid;grid-template-columns:auto auto 1fr;column-gap:5px;line-height:1.6;font-size:1rem}.def-prefixed-grid .pf-num{font-weight:700}
 
 /* Navigation */
 .card-nav{display:flex;gap:8px;margin-bottom:12px}
@@ -1297,7 +1298,7 @@ function showCard() {
     const parsed = m.defs.map(d => formatDef(d));
     const hasPrefix = parsed.some(p => p.includes('def-prefixed'));
     if (hasPrefix) {
-      let gridHtml = '<span class="def-prefixed-grid">';
+      let gridHtml = '<div class="def-prefixed-grid">';
       m.defs.forEach(d => {
         const pm = d.match(/^(.+?\)\s*)(\d+)\s+(.*)/);
         if (pm) {
@@ -1313,11 +1314,11 @@ function showCard() {
           }
         }
       });
-      gridHtml += '</span>';
-      meaningsHtml += `<div class="meaning-group"><span class="pos-tag">${m.pos}</span> ${gridHtml}</div>`;
+      gridHtml += '</div>';
+      meaningsHtml += `<div class="meaning-group"><span class="pos-tag">${m.pos}</span><div class="meaning-defs">${gridHtml}</div></div>`;
     } else {
       const defsHtml = parsed.join(' ');
-      meaningsHtml += `<div class="meaning-group"><span class="pos-tag">${m.pos}</span> <span class="def-inline">${defsHtml}</span></div>`;
+      meaningsHtml += `<div class="meaning-group"><span class="pos-tag">${m.pos}</span><div class="meaning-defs"><span class="def-inline">${defsHtml}</span></div></div>`;
     }
   });
 
@@ -1342,28 +1343,42 @@ function showCard() {
       partsHtml += '</div>';
       if (word.origin) {
         const lines = word.origin.split('\n');
-        const treeLines = [];
-        const subLines = [];
         let rootLine = '';
         let treeStarted = false;
+        const items = [];
         for (const line of lines) {
           const trimmed = line.trimStart();
-          if (trimmed.startsWith('├') || trimmed.startsWith('└') || trimmed.startsWith('┊')) {
+          let temp = trimmed, d = 0;
+          while (temp.startsWith('│')) { d++; temp = temp.substring(1).trimStart(); }
+          if (temp.startsWith('├') || temp.startsWith('└') || temp.startsWith('┊')) {
             treeStarted = true;
-            treeLines.push(trimmed.replace(/^[├└┊]\s*/, ''));
-          } else if (treeStarted) {
-            subLines.push(trimmed);
+            items.push({ depth: d, text: temp.replace(/^[├└┊]\s*/, '') });
+          } else if (d > 0 && treeStarted && items.length > 0) {
+            items[items.length - 1].text += '<br>' + temp;
+          } else if (treeStarted && items.length > 0) {
+            items[items.length - 1].text += '<br>' + trimmed;
           } else {
             rootLine += (rootLine ? '<br>' : '') + line;
           }
         }
-        if (treeLines.length > 0) {
+        if (items.length > 0) {
+          const buildTree = (startIdx, curDepth) => {
+            let html = '<ul class="tree-list">', i = startIdx;
+            while (i < items.length && items[i].depth >= curDepth) {
+              if (items[i].depth === curDepth) {
+                html += `<li class="tree-item">${items[i].text}`;
+                if (i + 1 < items.length && items[i + 1].depth > curDepth) {
+                  const sub = buildTree(i + 1, items[i + 1].depth);
+                  html += sub.html; i = sub.nextIdx;
+                } else { i++; }
+                html += '</li>';
+              } else { break; }
+            }
+            html += '</ul>';
+            return { html, nextIdx: i };
+          };
           let treeHtml = `<div class="tree-root">💡 ${rootLine}</div>`;
-          treeHtml += '<div class="tree-wrap"><ul class="tree-list">';
-          for (const t of treeLines) { treeHtml += `<li class="tree-item">${t}</li>`; }
-          treeHtml += '</ul>';
-          if (subLines.length > 0) { treeHtml += `<div class="tree-sub">${subLines.join('<br>')}</div>`; }
-          treeHtml += '</div>';
+          treeHtml += '<div class="tree-wrap">' + buildTree(0, 0).html + '</div>';
           partsHtml += `<div class="ety-origin">${treeHtml}</div>`;
         } else {
           partsHtml += `<div class="ety-origin">💡 ${word.origin.replace(/\n/g, '<br>')}</div>`;
